--- a/src/epub/text/act-3.xhtml
+++ b/src/epub/text/act-3.xhtml
@@ -1578,7 +1578,7 @@
 									<br/>
 									<span>And you all know, security</span>
 									<br/>
-									<span>Is mortals’ chiefest enemy. <i epub:type="z3998:stage-direction">Music and a song within: ‘Come away, come away,’ etc.</i></span>
+									<span>Is mortals’ chiefest enemy. <i epub:type="z3998:stage-direction">Music and a song within: ‘Come away, come away,’ <abbr>etc.</abbr></i></span>
 									<br/>
 									<span>Hark! I am call’d; my little spirit, see,</span>
 									<br/>
