--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -167,7 +167,7 @@
 									<br/>
 									<span>Live elves and fairies in a ring,</span>
 									<br/>
-									<span>Enchanting all that you put in. <i epub:type="z3998:stage-direction">Music and a song: ‘Black spirits,’ etc.</i></span>
+									<span>Enchanting all that you put in. <i epub:type="z3998:stage-direction">Music and a song: ‘Black spirits,’ <abbr>etc.</abbr></i></span>
 								</p>
 							</td>
 						</tr>
