Convert from British-style quotation to American style

--- a/src/epub/text/act-1.xhtml
+++ b/src/epub/text/act-1.xhtml
@@ -176,7 +176,7 @@
 							<td epub:type="z3998:persona">Sergeant</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>As whence the sun ‘gins his reflection</span>
+									<span>As whence the sun “gins his reflection</span>
 									<br/>
 									<span>Shipwrecking storms and direful thunders break,</span>
 									<br/>
@@ -375,9 +375,9 @@
 									<br/>
 									<span>And munch’d, and munch’d, and munch’d:⁠—</span>
 									<br/>
-									<span>‘Give me,’ quoth I:</span>
+									<span>“Give me,” quoth I:</span>
 									<br/>
-									<span>‘Aroint thee, witch!’ the rump-fed ronyon cries.</span>
+									<span>“Aroint thee, witch!” the rump-fed ronyon cries.</span>
 									<br/>
 									<span>Her husband’s to Aleppo gone, master o’ the Tiger:</span>
 									<br/>
@@ -1145,7 +1145,7 @@
 							<td epub:type="z3998:persona">Lady Macbeth</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>‘They met me in the day of success: and I have</span>
+									<span>“They met me in the day of success: and I have</span>
 									<br/>
 									<span>learned by the perfectest report, they have more in</span>
 									<br/>
@@ -1157,13 +1157,13 @@
 									<br/>
 									<span>the wonder of it, came missives from the king, who</span>
 									<br/>
-									<span>all-hailed me ‘Thane of Cawdor;’ by which title,</span>
+									<span>all-hailed me “Thane of Cawdor;” by which title,</span>
 									<br/>
 									<span>before, these weird sisters saluted me, and referred</span>
 									<br/>
-									<span>me to the coming on of time, with ‘Hail, king that</span>
+									<span>me to the coming on of time, with “Hail, king that</span>
 									<br/>
-									<span>shalt be!’ This have I thought good to deliver</span>
+									<span>shalt be!” This have I thought good to deliver</span>
 									<br/>
 									<span>thee, my dearest partner of greatness, that thou</span>
 									<br/>
@@ -1171,7 +1171,7 @@
 									<br/>
 									<span>ignorant of what greatness is promised thee. Lay it</span>
 									<br/>
-									<span>to thy heart, and farewell.’</span>
+									<span>to thy heart, and farewell.”</span>
 									<br/>
 									<span>Glamis thou art, and Cawdor; and shalt be</span>
 									<br/>
@@ -1189,11 +1189,11 @@
 									<br/>
 									<span>And yet wouldst wrongly win: thou’ldst have, great Glamis,</span>
 									<br/>
-									<span>That which cries ‘Thus thou must do, if thou have it;</span>
+									<span>That which cries “Thus thou must do, if thou have it;</span>
 									<br/>
 									<span>And that which rather thou dost fear to do</span>
 									<br/>
-									<span>Than wishest should be undone.’ Hie thee hither,</span>
+									<span>Than wishest should be undone.” Hie thee hither,</span>
 									<br/>
 									<span>That I may pour my spirits in thine ear;</span>
 									<br/>
@@ -1287,7 +1287,7 @@
 									<br/>
 									<span>Nor heaven peep through the blanket of the dark,</span>
 									<br/>
-									<span>To cry ‘Hold, hold!’</span>
+									<span>To cry “Hold, hold!”</span>
 								</p>
 							</td>
 						</tr>
@@ -1442,7 +1442,7 @@
 									<br/>
 									<span>Which still we thank as love. Herein I teach you</span>
 									<br/>
-									<span>How you shall bid God ‘ild us for your pains,</span>
+									<span>How you shall bid God “ild us for your pains,</span>
 									<br/>
 									<span>And thank us for your trouble.</span>
 								</p>
@@ -1653,7 +1653,7 @@
 									<br/>
 									<span>And live a coward in thine own esteem,</span>
 									<br/>
-									<span>Letting ‘I dare not’ wait upon ‘I would,’</span>
+									<span>Letting “I dare not” wait upon “I would,”</span>
 									<br/>
 									<span>Like the poor cat i’ the adage?</span>
 								</p>
