--- a/src/epub/text/act-2.xhtml
+++ b/src/epub/text/act-2.xhtml
@@ -376,7 +376,7 @@
 								<p>
 									<span>There’s one did laugh in’s sleep, and one cried</span>
 									<br/>
-									<span>‘Murder!’</span>
+									<span>“Murder!”</span>
 									<br/>
 									<span>That they did wake each other: I stood and heard them:</span>
 									<br/>
@@ -394,13 +394,13 @@
 							<td epub:type="z3998:persona">Macbeth</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>One cried ‘God bless us!’ and ‘Amen’ the other;</span>
+									<span>One cried “God bless us!” and “Amen” the other;</span>
 									<br/>
 									<span>As they had seen me with these hangman’s hands.</span>
 									<br/>
-									<span>Listening their fear, I could not say ‘Amen,’</span>
+									<span>Listening their fear, I could not say “Amen,”</span>
 									<br/>
-									<span>When they did say ‘God bless us!’</span>
+									<span>When they did say “God bless us!”</span>
 								</p>
 							</td>
 						</tr>
@@ -412,9 +412,9 @@
 							<td epub:type="z3998:persona">Macbeth</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>But wherefore could not I pronounce ‘Amen’?</span>
+									<span>But wherefore could not I pronounce “Amen”?</span>
 									<br/>
-									<span>I had most need of blessing, and ‘Amen’</span>
+									<span>I had most need of blessing, and “Amen’</span>
 									<br/>
 									<span>Stuck in my throat.</span>
 								</p>
@@ -434,7 +434,7 @@
 							<td epub:type="z3998:persona">Macbeth</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Methought I heard a voice cry ‘Sleep no more!</span>
+									<span>Methought I heard a voice cry “Sleep no more!</span>
 									<br/>
 									<span>Macbeth does murder sleep’, the innocent sleep,</span>
 									<br/>
@@ -456,11 +456,11 @@
 							<td epub:type="z3998:persona">Macbeth</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Still it cried ‘Sleep no more!’ to all the house:</span>
+									<span>Still it cried “Sleep no more!” to all the house:</span>
 									<br/>
-									<span>‘Glamis hath murder’d sleep, and therefore Cawdor</span>
+									<span>“Glamis hath murder’d sleep, and therefore Cawdor</span>
 									<br/>
-									<span>Shall sleep no more; Macbeth shall sleep no more.’</span>
+									<span>Shall sleep no more; Macbeth shall sleep no more.”</span>
 								</p>
 							</td>
 						</tr>
@@ -613,7 +613,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Porter</td>
-							<td>‘Faith sir, we were carousing till the second cock: and drink, sir, is a great provoker of three things.</td>
+							<td>“Faith sir, we were carousing till the second cock: and drink, sir, is a great provoker of three things.</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Macduff</td>
@@ -651,7 +651,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Porter</td>
-							<td>That it did, sir, i’ the very throat on me: but I requited him for his lie; and, I think, being too strong for him, though he took up my legs sometime, yet I made a shift to cast him.</td>
+							<td>That it did, sir, i” the very throat on me: but I requited him for his lie; and, I think, being too strong for him, though he took up my legs sometime, yet I made a shift to cast him.</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Macduff</td>
@@ -807,7 +807,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Macbeth</td>
-							<td>What is ‘t you say? the life?</td>
+							<td>What is “t you say? the life?</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Lennox</td>
@@ -883,7 +883,7 @@
 								<p>
 									<span>O Banquo, Banquo,</span>
 									<br/>
-									<span>Our royal master ‘s murder’d!</span>
+									<span>Our royal master “s murder’d!</span>
 								</p>
 							</td>
 						</tr>
@@ -923,7 +923,7 @@
 									<br/>
 									<span>I had lived a blessed time; for, from this instant,</span>
 									<br/>
-									<span>There ‘s nothing serious in mortality:</span>
+									<span>There “s nothing serious in mortality:</span>
 									<br/>
 									<span>All is but toys: renown and grace is dead;</span>
 									<br/>
@@ -957,7 +957,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Macduff</td>
-							<td>Your royal father ‘s murder’d.</td>
+							<td>Your royal father “s murder’d.</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Malcolm</td>
@@ -967,7 +967,7 @@
 							<td epub:type="z3998:persona">Lennox</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Those of his chamber, as it seem’d, had done ‘t:</span>
+									<span>Those of his chamber, as it seem’d, had done “t:</span>
 									<br/>
 									<span>Their hands and faces were an badged with blood;</span>
 									<br/>
@@ -1019,7 +1019,7 @@
 									<br/>
 									<span>That had a heart to love, and in that heart</span>
 									<br/>
-									<span>Courage to make ‘s love kno wn?</span>
+									<span>Courage to make “s love kno wn?</span>
 								</p>
 							</td>
 						</tr>
@@ -1051,7 +1051,7 @@
 									<br/>
 									<span>Hid in an auger-hole, may rush, and seize us?</span>
 									<br/>
-									<span>Let ‘s away;</span>
+									<span>Let “s away;</span>
 									<br/>
 									<span>Our tears are not yet brew’d.</span>
 								</p>
@@ -1101,7 +1101,7 @@
 								<p>
 									<span>Let’s briefly put on manly readiness,</span>
 									<br/>
-									<span>And meet i’ the hall together.</span>
+									<span>And meet i” the hall together.</span>
 								</p>
 							</td>
 						</tr>
