--- a/src/epub/text/act-3.xhtml
+++ b/src/epub/text/act-3.xhtml
@@ -163,7 +163,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Banquo</td>
-							<td>Ay, my good lord: our time does call upon ‘s.</td>
+							<td>Ay, my good lord: our time does call upon “s.</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Macbeth</td>
@@ -229,7 +229,7 @@
 									<br/>
 									<span>Thence to be wrench’d with an unlineal hand,</span>
 									<br/>
-									<span>No son of mine succeeding. If ‘t be so,</span>
+									<span>No son of mine succeeding. If “t be so,</span>
 									<br/>
 									<span>For Banquo’s issue have I filed my mind;</span>
 									<br/>
@@ -292,7 +292,7 @@
 									<br/>
 									<span>To half a soul and to a notion crazed</span>
 									<br/>
-									<span>Say ‘Thus did Banquo.’</span>
+									<span>Say “Thus did Banquo.”</span>
 								</p>
 							</td>
 						</tr>
@@ -350,7 +350,7 @@
 									<br/>
 									<span>Now, if you have a station in the file,</span>
 									<br/>
-									<span>Not i’ the worst rank of manhood, say ‘t;</span>
+									<span>Not i’ the worst rank of manhood, say “t;</span>
 									<br/>
 									<span>And I will put that business in your bosoms,</span>
 									<br/>
@@ -456,7 +456,7 @@
 									<br/>
 									<span>I will advise you where to plant yourselves;</span>
 									<br/>
-									<span>Acquaint you with the perfect spy o’ the time,</span>
+									<span>Acquaint you with the perfect spy o” the time,</span>
 									<br/>
 									<span>The moment on’t; for’t must be done to-night,</span>
 									<br/>
@@ -977,7 +977,7 @@
 								<p>
 									<span>Most royal sir,</span>
 									<br/>
-									<span>Fleance is ‘scaped.</span>
+									<span>Fleance is “scaped.</span>
 								</p>
 							</td>
 						</tr>
@@ -1221,7 +1221,7 @@
 							<td epub:type="z3998:persona">Macbeth</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Blood hath been shed ere now, i’ the olden time,</span>
+									<span>Blood hath been shed ere now, i” the olden time,</span>
 									<br/>
 									<span>Ere human statute purged the gentle weal;</span>
 									<br/>
@@ -1574,11 +1574,11 @@
 									<br/>
 									<span>He shall spurn fate, scorn death, and bear</span>
 									<br/>
-									<span>He hopes ‘bove wisdom, grace and fear:</span>
+									<span>He hopes “bove wisdom, grace and fear:</span>
 									<br/>
 									<span>And you all know, security</span>
 									<br/>
-									<span>Is mortals’ chiefest enemy. <i epub:type="z3998:stage-direction">Music and a song within: ‘Come away, come away,’ <abbr>etc.</abbr></i></span>
+									<span>Is mortals’ chiefest enemy. <i epub:type="z3998:stage-direction">Music and a song within: “Come away, come away,” <abbr>etc.</abbr></i></span>
 									<br/>
 									<span>Hark! I am call’d; my little spirit, see,</span>
 									<br/>
@@ -1655,7 +1655,7 @@
 									<br/>
 									<span>What ’twere to kill a father; so should Fleance.</span>
 									<br/>
-									<span>But, peace! for from broad words and ‘cause he fail’d</span>
+									<span>But, peace! for from broad words and “cause he fail’d</span>
 									<br/>
 									<span>His presence at the tyrant’s feast, I hear</span>
 									<br/>
@@ -1711,13 +1711,13 @@
 							<td epub:type="z3998:persona">Lord</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>He did: and with an absolute ‘Sir, not I,’</span>
+									<span>He did: and with an absolute “Sir, not I,”</span>
 									<br/>
 									<span>The cloudy messenger turns me his back,</span>
 									<br/>
-									<span>And hums, as who should say ‘You’ll rue the time</span>
+									<span>And hums, as who should say “You’ll rue the time</span>
 									<br/>
-									<span>That clogs me with this answer.’</span>
+									<span>That clogs me with this answer.”</span>
 								</p>
 							</td>
 						</tr>
