--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -167,7 +167,7 @@
 									<br/>
 									<span>Live elves and fairies in a ring,</span>
 									<br/>
-									<span>Enchanting all that you put in. <i epub:type="z3998:stage-direction">Music and a song: ‘Black spirits,’ <abbr>etc.</abbr></i></span>
+									<span>Enchanting all that you put in. <i epub:type="z3998:stage-direction">Music and a song: “Black spirits,” <abbr>etc.</abbr></i></span>
 								</p>
 							</td>
 						</tr>
@@ -1003,7 +1003,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Lady Macduff</b>, crying ‘Murder!’ Exeunt <b epub:type="z3998:persona">Murderers</b>, following her.</i>
+								<i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Lady Macduff</b>, crying “Murder!” Exeunt <b epub:type="z3998:persona">Murderers</b>, following her.</i>
 							</td>
 						</tr>
 					</tbody>
@@ -1867,7 +1867,7 @@
 									<br/>
 									<span>Bring thou this fiend of Scotland and myself;</span>
 									<br/>
-									<span>Within my sword’s length set him; if he ‘scape,</span>
+									<span>Within my sword’s length set him; if he “scape,</span>
 									<br/>
 									<span>Heaven forgive him too!</span>
 								</p>
