--- a/src/epub/text/act-5.xhtml
+++ b/src/epub/text/act-5.xhtml
@@ -395,9 +395,9 @@
 									<br/>
 									<span>All mortal consequences have pronounced me thus:</span>
 									<br/>
-									<span>‘Fear not, Macbeth; no man that’s born of woman</span>
+									<span>“Fear not, Macbeth; no man that’s born of woman</span>
 									<br/>
-									<span>Shall e’er have power upon thee.’ Then fly,</span>
+									<span>Shall e’er have power upon thee.” Then fly,</span>
 									<br/>
 									<span>false thanes,</span>
 									<br/>
@@ -692,7 +692,7 @@
 									<br/>
 									<span>Keeps still in Dunsinane, and will endure</span>
 									<br/>
-									<span>Our setting down before ‘t.</span>
+									<span>Our setting down before “t.</span>
 								</p>
 							</td>
 						</tr>
@@ -765,7 +765,7 @@
 								<p>
 									<span>Hang out our banners on the outward walls;</span>
 									<br/>
-									<span>The cry is still ‘They come:’ our castle’s strength</span>
+									<span>The cry is still “They come:” our castle’s strength</span>
 									<br/>
 									<span>Will laugh a siege to scorn: here let them lie</span>
 									<br/>
@@ -917,9 +917,9 @@
 									<br/>
 									<span>To doubt the equivocation of the fiend</span>
 									<br/>
-									<span>That lies like truth: ‘Fear not, till Birnam wood</span>
+									<span>That lies like truth: “Fear not, till Birnam wood</span>
 									<br/>
-									<span>Do come to Dunsinane:’ and now a wood</span>
+									<span>Do come to Dunsinane:” and now a wood</span>
 									<br/>
 									<span>Comes toward Dunsinane. Arm, arm, and out!</span>
 									<br/>
@@ -966,7 +966,7 @@
 									<br/>
 									<span>Lead our first battle: worthy Macduff and we</span>
 									<br/>
-									<span>Shall take upon ‘s what else remains to do,</span>
+									<span>Shall take upon “s what else remains to do,</span>
 									<br/>
 									<span>According to our order.</span>
 								</p>
@@ -1282,13 +1282,13 @@
 								<p>
 									<span>Then yield thee, coward,</span>
 									<br/>
-									<span>And live to be the show and gaze o’ the time:</span>
+									<span>And live to be the show and gaze o” the time:</span>
 									<br/>
 									<span>We’ll have thee, as our rarer monsters are,</span>
 									<br/>
 									<span>Painted on a pole, and underwrit,</span>
 									<br/>
-									<span>‘Here may you see the tyrant.’</span>
+									<span>“Here may you see the tyrant.”</span>
 								</p>
 							</td>
 						</tr>
@@ -1310,7 +1310,7 @@
 									<br/>
 									<span>I throw my warlike shield. Lay on, Macduff,</span>
 									<br/>
-									<span>And damn’d be him that first cries, ‘Hold, enough!’ <i epub:type="z3998:stage-direction">Exeunt, fighting. Alarums.</i></span>
+									<span>And damn’d be him that first cries, “Hold, enough!” <i epub:type="z3998:stage-direction">Exeunt, fighting. Alarums.</i></span>
 								</p>
 							</td>
 						</tr>
