[Editorial] match text to Victoria (Act 1)

--- a/src/epub/text/act-1.xhtml
+++ b/src/epub/text/act-1.xhtml
@@ -16,13 +16,13 @@
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">I</span>
 				</h3>
-				<p>Thunder and lightning.</p>
+				<p>A desert place.</p>
 				<table>
 					<tbody>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter three <b epub:type="z3998:persona">Witches</b>.</i>
+								<i epub:type="z3998:stage-direction">Thunder and lightning. Enter three <b epub:type="z3998:persona">Witches</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -176,7 +176,7 @@
 							<td epub:type="z3998:persona">Sergeant</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>As whence the sun “gins his reflection</span>
+									<span>As whence the sun ’gins his reflection</span>
 									<br/>
 									<span>Shipwrecking storms and direful thunders break,</span>
 									<br/>
@@ -222,7 +222,7 @@
 									<br/>
 									<span>Except they meant to bathe in reeking wounds,</span>
 									<br/>
-									<span>Or memorise another Golgotha,</span>
+									<span>Or memorize another Golgotha,</span>
 									<br/>
 									<span>I cannot tell.</span>
 									<br/>
@@ -290,7 +290,7 @@
 									<br/>
 									<span>Confronted him with self-comparisons,</span>
 									<br/>
-									<span>Point against point rebellious, arm ’gainst arm.</span>
+									<span>Point against point rebellious, arm ’gainst arm,</span>
 									<br/>
 									<span>Curbing his lavish spirit: and, to conclude,</span>
 									<br/>
@@ -308,7 +308,7 @@
 								<p>
 									<span>That now</span>
 									<br/>
-									<span>Sweno, the Norways’ king, craves composition:</span>
+									<span>Sweno, the Norways’ king, craves composition;</span>
 									<br/>
 									<span>Nor would we deign him burial of his men</span>
 									<br/>
@@ -373,9 +373,7 @@
 								<p>
 									<span>A sailor’s wife had chestnuts in her lap,</span>
 									<br/>
-									<span>And munch’d, and munch’d, and munch’d:⁠—</span>
-									<br/>
-									<span>“Give me,” quoth I:</span>
+									<span>And munch’d, and munch’d, and munch’d:⁠—“Give me,” quoth I:</span>
 									<br/>
 									<span>“Aroint thee, witch!” the rump-fed ronyon cries.</span>
 									<br/>
@@ -499,7 +497,7 @@
 									<br/>
 									<span>That man may question? You seem to understand me,</span>
 									<br/>
-									<span>By each at once her chappy finger laying</span>
+									<span>By each at once her choppy finger laying</span>
 									<br/>
 									<span>Upon her skinny lips: you should be women,</span>
 									<br/>
@@ -765,11 +763,9 @@
 								<p>
 									<span><i epub:type="z3998:stage-direction">Aside.</i> Glamis, and thane of Cawdor!</span>
 									<br/>
-									<span>The greatest is behind. <i epub:type="z3998:stage-direction">To <b epub:type="z3998:persona">Ross</b> and <b epub:type="z3998:persona">Angus</b>.</i></span>
+									<span>The greatest is behind. <i epub:type="z3998:stage-direction">To <b epub:type="z3998:persona">Ross</b> and <b epub:type="z3998:persona">Angus</b>.</i> Thanks for your pains.</span>
 									<br/>
-									<span>Thanks for your pains. <i epub:type="z3998:stage-direction">To <b epub:type="z3998:persona">Banquo</b>.</i></span>
-									<br/>
-									<span>Do you not hope your children shall be kings,</span>
+									<span><i epub:type="z3998:stage-direction">To <b epub:type="z3998:persona">Banquo</b>.</i> Do you not hope your children shall be kings,</span>
 									<br/>
 									<span>When those that gave the thane of Cawdor to me</span>
 									<br/>
@@ -807,7 +803,9 @@
 									<br/>
 									<span>As happy prologues to the swelling act</span>
 									<br/>
-									<span>Of the imperial theme.⁠—I thank you, gentlemen. <i epub:type="z3998:stage-direction">Aside.</i></span>
+									<span>Of the imperial theme.⁠—I thank you, gentlemen.</span>
+									<br/>
+									<span><i epub:type="z3998:stage-direction">Aside.</i> This supernatural soliciting</span>
 									<br/>
 									<span>Cannot be ill, cannot be good: if ill,</span>
 									<br/>
@@ -853,7 +851,7 @@
 							<td epub:type="z3998:persona">Banquo</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>New horrors come upon him,</span>
+									<span>New honours come upon him,</span>
 									<br/>
 									<span>Like our strange garments, cleave not to their mould</span>
 									<br/>
@@ -1132,7 +1130,7 @@
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">V</span>
 				</h3>
-				<p>Inverness. Macbeth’s castle.</p>
+				<p>Inverness. <b epub:type="z3998:persona">Macbeth’s</b> castle.</p>
 				<table>
 					<tbody>
 						<tr>
@@ -1143,67 +1141,42 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Lady Macbeth</td>
-							<td epub:type="z3998:verse">
-								<p>
-									<span>“They met me in the day of success: and I have</span>
-									<br/>
-									<span>learned by the perfectest report, they have more in</span>
-									<br/>
-									<span>them than mortal knowledge. When I burned in desire</span>
-									<br/>
-									<span>to question them further, they made themselves air,</span>
-									<br/>
-									<span>into which they vanished. Whiles I stood rapt in</span>
-									<br/>
-									<span>the wonder of it, came missives from the king, who</span>
-									<br/>
-									<span>all-hailed me “Thane of Cawdor;” by which title,</span>
-									<br/>
-									<span>before, these weird sisters saluted me, and referred</span>
-									<br/>
-									<span>me to the coming on of time, with “Hail, king that</span>
-									<br/>
-									<span>shalt be!” This have I thought good to deliver</span>
-									<br/>
-									<span>thee, my dearest partner of greatness, that thou</span>
-									<br/>
-									<span>mightst not lose the dues of rejoicing, by being</span>
-									<br/>
-									<span>ignorant of what greatness is promised thee. Lay it</span>
-									<br/>
-									<span>to thy heart, and farewell.”</span>
-									<br/>
-									<span>Glamis thou art, and Cawdor; and shalt be</span>
-									<br/>
-									<span>What thou art promised: yet do I fear thy nature;</span>
-									<br/>
-									<span>It is too full o’ the milk of human kindness</span>
-									<br/>
-									<span>To catch the nearest way: thou wouldst be great;</span>
-									<br/>
-									<span>Art not without ambition, but without</span>
-									<br/>
-									<span>The illness should attend it: what thou wouldst highly,</span>
-									<br/>
-									<span>That wouldst thou holily; wouldst not play false,</span>
-									<br/>
-									<span>And yet wouldst wrongly win: thou’ldst have, great Glamis,</span>
-									<br/>
-									<span>That which cries “Thus thou must do, if thou have it;</span>
-									<br/>
-									<span>And that which rather thou dost fear to do</span>
-									<br/>
-									<span>Than wishest should be undone.” Hie thee hither,</span>
-									<br/>
-									<span>That I may pour my spirits in thine ear;</span>
-									<br/>
-									<span>And chastise with the valour of my tongue</span>
-									<br/>
-									<span>All that impedes thee from the golden round,</span>
-									<br/>
-									<span>Which fate and metaphysical aid doth seem</span>
-									<br/>
-									<span>To have thee crown’d withal.</span>
+							<td>
+								<p>“They met me in the day of success: and I have learned by the perfectest report, they have more in them than mortal knowledge. When I burned in desire to question them further, they made themselves air, into which they vanished. Whiles I stood rapt in the wonder of it, came missives from the king, who all-hailed me ‘Thane of Cawdor;’ by which title, before, these weird sisters saluted me, and referred me to the coming on of time, with ‘Hail, king that shalt be!’ This have I thought good to deliver thee, my dearest partner of greatness, that thou mightst not lose the dues of rejoicing, by being ignorant of what greatness is promised thee. Lay it to thy heart, and farewell.”</p>
+								<div epub:type="z3998:verse">
+									<p>
+										<span>Glamis thou art, and Cawdor; and shalt be</span>
+										<br/>
+										<span>What thou art promised: yet do I fear thy nature;</span>
+										<br/>
+										<span>It is too full o’ the milk of human kindness</span>
+										<br/>
+										<span>To catch the nearest way: thou wouldst be great;</span>
+										<br/>
+										<span>Art not without ambition, but without</span>
+										<br/>
+										<span>The illness should attend it: what thou wouldst highly,</span>
+										<br/>
+										<span>That wouldst thou holily; wouldst not play false,</span>
+										<br/>
+										<span>And yet wouldst wrongly win: thou’ldst have, great Glamis,</span>
+										<br/>
+										<span>That which cries “Thus thou must do, if thou have it;</span>
+										<br/>
+										<span>And that which rather thou dost fear to do</span>
+										<br/>
+										<span>Than wishest should be undone.” Hie thee hither,</span>
+										<br/>
+										<span>That I may pour my spirits in thine ear;</span>
+										<br/>
+										<span>And chastise with the valour of my tongue</span>
+										<br/>
+										<span>All that impedes thee from the golden round,</span>
+										<br/>
+										<span>Which fate and metaphysical aid doth seem</span>
+										<br/>
+										<span>To have thee crown’d withal.</span>
+									</div>
 								</p>
 							</td>
 						</tr>
@@ -1383,7 +1356,7 @@
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">VI</span>
 				</h3>
-				<p>Before Macbeth’s castle.</p>
+				<p>Before <b epub:type="z3998:persona">Macbeth’s</b> castle.</p>
 				<table>
 					<tbody>
 						<tr>
@@ -1442,7 +1415,7 @@
 									<br/>
 									<span>Which still we thank as love. Herein I teach you</span>
 									<br/>
-									<span>How you shall bid God “ild us for your pains,</span>
+									<span>How you shall bid God ’ild us for your pains,</span>
 									<br/>
 									<span>And thank us for your trouble.</span>
 								</p>
@@ -1522,7 +1495,7 @@
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">VII</span>
 				</h3>
-				<p>Macbeth’s castle.</p>
+				<p><b epub:type="z3998:persona">Macbeth’s</b> castle.</p>
 				<table>
 					<tbody>
 						<tr>
